--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -109,7 +109,7 @@
                 <a href="#"></a><a href="https://www.instagram.com/yourprofile" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#"> <a href="https://www.youtube.com/channel/yourchannel" target="_blank"><i class="fa-brands fa-youtube"></i></a>
              </div>
-             <p class="end">CopyRight by Mahesh </p>
+             <p class="end">CopyRight by kushwanth </p>
 
              </footer>
 </body>
