--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -46,7 +46,7 @@
             <div clas="about-text">
                 <h2>About Me</h2>
                 <h5>Web developer</h5>
-                <p><strong><span> Hi, I'm Mahesh Kaluva,</span> a passionate front-end web developer with a knack for creating engaging, responsive, and visually appealing websites<strong>
+                <p><strong><span> Hi, I'm kushwanth p,</span> a passionate front-end web developer with a knack for creating engaging, responsive, and visually appealing websites<strong>
                      </strong>
                     Currently, I am enhancing my skills in web development and exploring new technologies to stay ahead in the ever-evolving tech world.
                     I enjoy solving problems, learning new frameworks, and collaborating on exciting projects.</p>
