--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -105,8 +105,8 @@
                 <p>PILLA KUSHWANTH</p>
                 <P>I'm here to provide you a best website with a classic design. Web development is my passion.</P>
                 <div class="social">
-                <a href="#">  <a href="https://www.facebook.com/yourprofile" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"></a><a href="https://www.instagram.com/yourprofile" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#">  <a href="https://www.facebook.com/kushwanth.p.58/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"></a><a href="https://www.instagram.com/_.kushwanth._p/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#"> <a href="https://www.youtube.com/channel/yourchannel" target="_blank"><i class="fa-brands fa-youtube"></i></a>
              </div>
              <p class="end">CopyRight by kushwanth </p>
